--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-bookmarks",
+  "name": "react-yt-lists",
   "version": "1.0.0",
   "description": "Boilerplate for ReactJS project with hot code reloading",
   "scripts": {
@@ -34,13 +34,20 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
+    "babel-plugin-syntax-async-functions": "^6.0.15",
+    "babel-plugin-transform-regenerator": "^6.0.15",
+    "babel-polyfill": "^6.0.15",
     "eslint-plugin-react": "^3.6.2",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "babel-plugin-transform-runtime": "^6.1.18",
+    "moment": "^2.10.6",
     "react": "^0.14.0",
+    "react-dnd": "^2.0.2",
+    "react-dnd-html5-backend": "^2.0.0",
     "react-dom": "^0.14.0"
   }
 }
